# viz_3Dbbox_ros2_pointpillars

./: README.md  bbox_video.py  run_all_pcs.py  viewer.py  viz_all_pcs.py
src/to_bin/: package.xml  setup.cfg  setup.py
src/to_bin/to_bin/: subscriber_member_function.py
visual_tools/: __init__.py  open3d_box.py
