<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>to_bin</name>
  <version>0.0.0</version>
  <description>Converts point cloud data to bin file.</description>
  <maintainer email="asawareeb@nvidia.com">nvidia</maintainer>
  <license>Open</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
